# OLIVE

./: CMakeLists.txt  Makefile  olive_deploy  olive_eval  olive_tests
include/olive/: config.hpp  intent.hpp  matrix.hpp  model.hpp  reward.hpp  sensor.hpp  trainer.hpp
scripts/: eval.cpp
src/: intent.cpp  main.cpp  model.cpp  reward.cpp  sensor.cpp  trainer.cpp
tests/: test_olive.cpp
